--- a/public/css/fonts/space.css
+++ b/public/css/fonts/space.css
@@ -147,9 +147,9 @@ blockquote.icon:before {
   line-height: 1.3;
 }
 
-.text-main{
+/* .text-main{
   color: #3175D1 !important;
-}
+} */
 
 /* width */
 ::-webkit-scrollbar {
